Implement order handling functionality and remove AboutView
Introduced classes and services to manage order handling functionality, including Order, OrderPosition, and OrderStatusEnum along with corresponding CRUD operations. These enhancements improve the robustness of the order system. Also, eliminated the redundant AboutView from the application for cleanup.